# lpc8xx-hal

./: .gdbinit  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Embed.toml  LICENSE  README.md  build.rs  memory.x  memory_16_4.x  memory_32_8.x  memory_64_16.x  openocd.gdb  openocd_82x.cfg  openocd_84x.cfg  openocd_lpc845.gdb
.cargo/: config  config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
examples/: 845_gpio.rs  adc.rs  blinker.rs  ctimer_blink.rs  ctimer_fade.rs  gpio.rs  gpio_delay.rs  gpio_dynamic.rs  gpio_generic.rs  gpio_input.rs  gpio_simple.rs  gpio_sleep.rs  gpio_timer.rs  i2c_eeprom.rs  i2c_master_slave.rs  i2c_master_slave_dma.rs  i2c_vl53l0x.rs  mrt_clock.rs  pinint.rs  pmu.rs  rtfm.rs  rtic.rs  spi_apa102.rs  usart.rs  usart_dma.rs
lpc82x-hal/: Cargo.toml  README.md  openocd.cfg
lpc82x-hal/examples/: gpio.rs  i2c_vl53l0x.rs  pmu.rs  usart.rs
lpc82x-hal/src/: clock.rs  dma.rs  gpio.rs  i2c.rs  lib.rs  pmu.rs  reg_proxy.rs  sleep.rs  swm.rs  usart.rs  wkt.rs
lpc845-hal/: Cargo.toml  README.md  memory.x
lpc845-hal/examples/: gpio.rs
lpc845-hal/src/: lib.rs
lpc8xx-hal-common/: Cargo.toml
lpc8xx-hal-common/src/: gpio.rs  lib.rs  reg_proxy.rs  swm.rs  syscon.rs
scripts/: build-examples.sh  build.sh  flash.sh  test.sh
src/: adc.rs  clock.rs  ctimer.rs  delay.rs  dma.rs  gpio.rs  i2c.rs  lib.rs  mrt.rs  mrtimer.rs  pinint.rs  pins.rs  pmu.rs  reg_proxy.rs  sleep.rs  spi.rs  swm.rs  syscon.rs  usart.rs  wkt.rs
src/ctimer/: channel.rs  channels.rs  gen.rs  mod.rs  peripheral.rs
src/dma/: buffer.rs  channels.rs  descriptors.rs  gen.rs  mod.rs  peripheral.rs  transfer.rs
src/i2c/: clock.rs  error.rs  instances.rs  interrupts.rs  master.rs  peripheral.rs  slave.rs
src/mrt/: channel.rs  gen.rs  mod.rs  peripheral.rs  ticks.rs
src/pinint/: gen.rs  interrupt.rs  peripheral.rs  traits.rs
src/pins/: gen.rs  mod.rs  pin.rs  state.rs  traits.rs
src/spi/: clock.rs  dma.rs  instances.rs  interrupts.rs  peripheral.rs
src/swm/: assignment.rs  fixed_functions.rs  function_kind.rs  functions.rs  handle.rs  movable_functions.rs  peripheral.rs  state.rs
src/syscon/: clock_source.rs  clocksource.rs  clocksource_82x.rs  clocksource_845.rs  frg.rs
src/syscon/clock_source/: clocksource_82x.rs  clocksource_845.rs
src/syscon/clocksource/: clocksource_82x.rs  clocksource_845.rs
src/usart/: clock.rs  flags.rs  instances.rs  peripheral.rs  rx.rs  settings.rs  state.rs  tx.rs
test-suite/: Cargo.toml  README.md
test-suite/.cargo/: config.toml
test-suite/src/: lib.rs
test-suite/tests/: Cargo.toml
test-suite/tests/tests/: test.rs
tests/: compiletest.rs
tests/compile-fail/swm/: assign-function-to-multiple-pins.rs  assign-function-to-multiple-pins.stderr  assign-multiple-output-functions.rs  assign-multiple-output-functions.stderr  unassign-function-from-wrong-pin.rs  unassign-function-from-wrong-pin.stderr  unassign-unassigned-input-function.rs  unassign-unassigned-input-function.stderr  unassign-unassigned-output-function.rs  unassign-unassigned-output-function.stderr
