[package]
name    = "lpc8xx-hal"
version = "0.8.1"
edition = "2018"

authors = [
    "David Sawatzke <david@sawatzke.de>",
    "Hanno Braun <hanno@braun-embedded.com>"
]

description   = "Hardware Abstraction Layer (HAL) for the NXP LPC800 series of ARM Cortex-M0+ microcontrollers"
documentation = "https://docs.rs/lpc8xx-hal"
repository    = "https://github.com/lpc-rs/lpc8xx-hal"
license       = "0BSD"
readme        = "README.md"

categories = ["embedded", "hardware-support", "no-std"]
keywords   = ["nxp", "lpc", "lpc82x", "lpc845"]


[badges]
travis-ci = { repository = "lpc-rs/lpc8xx-hal" }


[dependencies]
cortex-m     = "0.6.1"
cortex-m-rt  = { version = "0.6.10", optional = true }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb           = "0.1.2"
void         = { version = "1.0.2", default-features = false }
# This should be in [dev-dependencies], but those can't be optional. Issue:
# https://github.com/rust-lang/cargo/issues/1596
compiletest_rs = { version = "0.3.23", optional = true }

[dependencies.lpc82x-pac]
optional     = true
version      = "0.7"

[dependencies.lpc845-pac]
optional     = true
version      = "0.3.0"


[dev-dependencies]
cortex-m-rtic = "0.5.3"

[dev-dependencies.panic-rtt-target]
version  = "0.1.0"
features = ["cortex-m"]

[dev-dependencies.rtt-target]
version  = "0.2.0"
features = ["cortex-m"]


# Termion has been made optional, as it doesn't build on Windows:
# https://gitlab.redox-os.org/redox-os/termion/issues/167
[build-dependencies.termion]
version  = "1.5.3"
optional = true


[features]

# Target hardware selection
822m101jdh20 = ["822", "20"]
822m101jhi33 = ["822", "33"]
824m201jdh20 = ["824", "20"]
824m201jhi33 = ["824", "33"]
#844m201jhi33 = ["844", "33"]
#844m201jbd48 = ["844", "48"]
#844m201jhi48 = ["844", "48"]
#844m201jbd64 = ["844", "64"]
845m301jhi33 = ["845", "33"]
845m301jbd48 = ["845", "48"]
845m301jhi48 = ["845", "48"]
845m301jbd64 = ["845", "64"]

# Selection of whole families or parts thereof as your target hardware.
82x = ["lpc82x-pac"]
822 = ["82x"]
824 = ["82x"]
845 = ["lpc845-pac"]

# Runtime support. Required when building an application, not a library.
#
# That these features depend on the `82x`/`845` features looks redundant, but is
# actually required by the build script to check the target selection.
82x-rt = ["82x", "cortex-m-rt", "lpc82x-pac/rt", "rt-selected"]
845-rt = ["845", "cortex-m-rt", "lpc845-pac/rt", "rt-selected"]

# Indicates that the feature selection is deliberate and should not cause any
# warnings.
no-target-warning = []

# Indicates to the build script that we're building docs, and it can skip
# whatever might not work or is not necessary.
docs = []

# Internal implementation detail. Used by HAL code to determine the exact
# hardware capabilites.
20 = []
33 = []
48 = []
64 = []

# Internal implementation detail. Used by other code to determine whether a
# runtime feature was selected.
rt-selected = []

# This is needed to make the compiletest stuff optional. It requires std, which
# means we can't build it together with the examples.
compiletest = ["compiletest_rs"]


[[example]]
name              = "gpio_sleep"
required-features = ["rt-selected"]

[[example]]
name              = "gpio_simple"
required-features = ["rt-selected"]

[[example]]
name              = "gpio_delay"
required-features = ["rt-selected"]

[[example]]
name              = "gpio_input"
required-features = ["rt-selected", "845"]

[[example]]
name              = "gpio_timer"
required-features = ["rt-selected"]

[[example]]
name              = "i2c_master_slave"
required-features = ["rt-selected", "845"]

[[example]]
name              = "i2c_master_slave_dma"
required-features = ["rt-selected", "845"]

[[example]]
name              = "i2c_vl53l0x"
required-features = ["rt-selected", "82x"]

[[example]]
name              = "i2c_eeprom"
required-features = ["rt-selected"]

[[example]]
name              = "pinint"
required-features = ["rt-selected", "845"]

[[example]]
name              = "pmu"
required-features = ["rt-selected", "82x"]

[[example]]
name              = "usart"
required-features = ["rt-selected"]

[[example]]
name              = "usart_dma"
required-features = ["rt-selected", "845"]

[[example]]
name              = "ctimer_fade"
required-features = ["rt-selected", "845"]

[[example]]
name              = "adc"
required-features = ["rt-selected", "845"]

[[example]]
name              = "rtfm"
required-features = ["rt-selected", "845"]

[[example]]
name              = "spi_apa102"
required-features = ["rt-selected"]


[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"


[package.metadata.docs.rs]
features = ["845", "docs"]
