[package]
name    = "lpc82x-hal"
version = "0.4.0"
authors = ["Hanno Braun <hanno@braun-robotics.com>"]
edition = "2018"

description   = "Hardware Abstraction Layer (HAL) for the NXP LPC82x series of ARM Cortex-M0+ microcontroller"
documentation = "https://docs.rs/lpc82x-hal"
repository    = "https://github.com/braun-robotics/rust-lpc82x-hal"
license       = "0BSD"
readme        = "README.md"
categories    = ["embedded", "hardware-support", "no-std"]
keywords      = ["arm", "cortex-m", "nxp", "lpc", "embedded-hal-impl"]


[badges]
maintenance = { status = "actively-developed" }
travis-ci   = { repository = "braun-robotics/rust-lpc82x-hal" }


[dependencies]
cortex-m     = "0.5.2"
embedded-hal = { version = "0.2", features = ["unproven"] }
lpc82x-pac   = "0.6"
nb           = "0.1.1"
void         = { version = "1", default-features = false }
# This should be in [dev-dependencies], but those can't be optional. Issue:
# https://github.com/rust-lang/cargo/issues/1596
compiletest_rs = { version = "0.3", optional = true }

[dependencies.lpc8xx-hal-common]
path = "../lpc8xx-hal-common"
version = "0.4.0"
features = ["82x"]

[dev-dependencies]
cortex-m-rt = "0.6.3"
panic-halt  = "0.2.0"

[profile.release]
incremental = false
lto         = true
opt-level   = "z"

[features]
# This is needed to make the compiletest stuff optional. It requires std, which
# means we can't build it together with the examples.
compiletest = ["compiletest_rs"]
rt          = ["lpc82x-pac/rt"]


[[example]]
name              = "gpio"
required-features = ["rt"]

[[example]]
name              = "i2c_vl53l0x"
required-features = ["rt"]

[[example]]
name              = "pmu"
required-features = ["rt"]

[[example]]
name              = "usart"
required-features = ["rt"]


[package.metadata.release]
pre-release-commit-message = "chore: Release version {{version}}"
pro-release-commit-message = "chore: Bump version to {{version}}"
tag-prefix                 = "v"
tag-message                = "Version {{version}}"
dev-version-ext            = "dev"

