[package]
name    = "lpc845-hal"
version = "0.4.0"
authors = [
    "David Sawatzke <david@sawatzke.de>",
    "Hanno Braun <hanno@braun-robotics.com>"
]
edition = "2018"

description   = "Hardware Abstraction Layer (HAL) for the NXP LPC825 ARM Cortex-M0+ microcontroller"
documentation = "https://docs.rs/lpc845-hal"
repository    = "https://github.com/lpc-rs/lpc82x-hal"
license       = "0BSD"
readme        = "README.md"
categories    = ["embedded", "hardware-support", "no-std"]
keywords      = ["arm", "cortex-m", "nxp", "lpc", "embedded-hal-impl"]


[badges]
travis-ci   = { repository = "lpc-rs/lpc82x-hal" }


[dependencies]
cortex-m     = "0.5.2"
embedded-hal = { version = "0.2", features = ["unproven"] }
lpc845-pac   = "0.1"
nb           = "0.1.1"
void         = { version = "1", default-features = false }
# This should be in [dev-dependencies], but those can't be optional. Issue:
# https://github.com/rust-lang/cargo/issues/1596
compiletest_rs = { version = "0.3", optional = true }

[dependencies.lpc8xx-hal-common]
path = "../lpc8xx-hal-common"
version = "0.4.0"
features = ["845"]

[dev-dependencies]
cortex-m-rt = "0.6.3"
panic-halt  = "0.2.0"


[features]
rt          = ["lpc845-pac/rt"]
