[package]
name    = "lpc845-hal"
version = "0.4.0"
authors = [
    "David Sawatzke <david@sawatzke.de>",
    "Hanno Braun <hanno@braun-robotics.com>"
]
edition = "2018"

description   = "Hardware Abstraction Layer (HAL) for the NXP LPC845 ARM Cortex-M0+ microcontroller"
documentation = "https://docs.rs/lpc845-hal"
repository    = "https://github.com/lpc-rs/lpc8xx-hal"
license       = "0BSD"
readme        = "README.md"
categories    = ["embedded", "hardware-support", "no-std"]
keywords      = ["arm", "cortex-m", "nxp", "lpc", "embedded-hal-impl"]


[badges]
travis-ci   = { repository = "lpc-rs/lpc8xx-hal" }


[dependencies]
cortex-m     = "0.6.1"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
lpc845-pac   = "0.2"
nb           = "0.1.2"
void         = { version = "1.0.2", default-features = false }
# This should be in [dev-dependencies], but those can't be optional. Issue:
# https://github.com/rust-lang/cargo/issues/1596
compiletest_rs = { version = "0.3.23", optional = true }

[dependencies.lpc8xx-hal-common]
path = "../lpc8xx-hal-common"
version = "0.4.0"
features = ["845"]

[dev-dependencies]
cortex-m-rt = "0.6.10"
panic-halt  = "0.2.0"


[features]
rt          = ["lpc845-pac/rt"]

[[example]]
name              = "gpio"
required-features = ["rt"]
