[workspace]
members = ["tests"]
default-members = ["tests"]


[package]
name    = "test-suite"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"
publish = false


[dependencies]
defmt       = "0.1.3"
defmt-rtt   = "0.1.0"
defmt-test  = "0.1.1"
panic-probe = "0.1.0"

[dependencies.lpc8xx-hal]
path     = ".."
features = ["no-target-warning"]


[features]
default = ["defmt-default"]
82x = ["lpc8xx-hal/82x-rt"]
845 = ["lpc8xx-hal/845-rt"]

# These features control log levels of `defmt`.
defmt-default = []
defmt-trace   = []
defmt-debug   = []
defmt-info    = []
defmt-warn    = []
defmt-error   = []


[profile.dev]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
overflow-checks  = true

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = "fat"
opt-level        = 3
overflow-checks  = false


# Do not optimize proc-macro crates to get faster builds.

[profile.dev.build-override]
codegen-units    = 8
debug            = false
debug-assertions = false
opt-level        = 0
overflow-checks  = false

[profile.release.build-override]
codegen-units    = 8
debug            = false
debug-assertions = false
opt-level        = 0
overflow-checks  = false
