[package]
name    = "tests"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"
publish = false


[[test]]
name    = "test"
harness = false


[dependencies]
defmt       = "0.1.3"
defmt-test  = "0.1.1"

[dependencies.test-suite]
path = ".."


[features]
default = ["defmt-trace"]

# These features control log levels of `defmt`.
defmt-default = []
defmt-trace   = []
defmt-debug   = []
defmt-info    = []
defmt-warn    = []
defmt-error   = []
